# Coding_Agent

./: .gitignore  CONTRIBUTING.md  README.md  coding_agent_prompt.md  config.yaml  main.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  EXAMPLES.md  GAP_ANALYSIS.md
generated_code/: sorting_algorithms.py  sorting_program.py
tests/: test_context_manager.py  test_file_management.py  test_persistent_shell.py  test_tool_registration.py  test_v5_features.py  test_version.py
turing/: __init__.py  agent.py  config.py  prompt.py  safety.py
turing/benchmark/: __init__.py  datasets.py  evaluator.py  runner.py
turing/evolution/: __init__.py  competitive.py  metacognition.py  tracker.py
turing/llm/: __init__.py  provider.py  router.py
turing/lsp/: __init__.py  __main__.py  server.py
turing/mcp/: __init__.py  client.py  manager.py  server.py
turing/memory/: __init__.py  long_term.py  manager.py  persistent.py  working.py
turing/rag/: __init__.py  engine.py
turing/tools/: __init__.py  agent_tools.py  ast_tools.py  benchmark_tools.py  command_tools.py  evolution_tools.py  external_tools.py  file_tools.py  git_tools.py  github_tools.py  mcp_tools.py  memory_tools.py  metacognition_tools.py  project_tools.py  quality_tools.py  refactor_tools.py  registry.py  search_tools.py  test_tools.py
vscode-extension/: README.md  package.json
vscode-extension/src/: chatView.ts  extension.ts  mcpClient.ts
web/: server.py
web/static/css/: style.css
web/static/js/: app.js
web/templates/: index.html
